--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
 .App {
-  text-align: center;
+  max-width: 960px;
+  margin: 0 auto;
+}
+.header {
+  text-transform: uppercase;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Container styles */
+.container {
+  background-color: aliceblue;
+  margin: 1rem 0;
+  box-shadow: 2px 2px 10px 0px rgb(0 0 0 / 10%);
+  border: solid 1px rgb(0 0 0 / 10%);
+  padding: 2rem;
+}
+.title {
+  position: relative;
+  width: fit-content;
+}
+.title::before {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  bottom: -8px;
+  left: 0;
+  width: 80%;
+  height: 2px;
+  background-color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Countdown styles */
+.countdown {
+  padding: 20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.countdown-header {
+  font-size: 32px;
 }
